force-app/main/default/objects/Workflow_Log__c/Workflow_Log__c.object-meta.xml
<CustomObject>
    <label>Workflow Log</label>
    <nameField>
        <displayFormat>WL-{000}</displayFormat>
        <label>Workflow Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workflow Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>