force-app/main/default/objects/Workflow_Log__c/fields/Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Name__c</fullName>
    <description>Optional — like &quot;Clicked X&quot;</description>
    <label>Action Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>