force-app/main/default/objects/Workflow_Log__c/fields/Behavior_Data__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Data__c</fullName>
    <label>Behavior_Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>