force-app/main/default/objects/Workflow_Log__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>Store the object&apos;s name (e.g., Case, Opportunity)</description>
    <label>Object API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>