force-app/main/default/objects/Workflow_Log__c/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <description>Store the related record ID</description>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>