force-app/main/default/objects/Workflow_Log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Track who performed the action</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Workflow_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>